// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@components/PlayButton should match snapshot 1`] = `
<button
  className="play-btn btn-rounded text-left text-truncate btn btn-outline-primary btn-lg btn-block"
  onClick={[Function]}
  type={undefined}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-play fa-w-14 fa-fw "
    data-icon="play"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
   
  Test
</button>
`;

exports[`@components/PlayButton should match snpashot when audio is playing 1`] = `
<button
  className="play-btn btn-rounded text-left text-truncate btn btn-primary btn-lg btn-block"
  onClick={[Function]}
  type={undefined}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-pause fa-w-14 fa-fw "
    data-icon="pause"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
   
  Test
</button>
`;
